unpackaged/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <description>This Object is used to track Health Insurance Information for a Patient</description>
    <label>Application</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>