unpackaged/main/default/objects/Application__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Applicant or Beneficiary Account Number.</description>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>