unpackaged/main/default/objects/Application__c/fields/Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Activity_Code__c</fullName>
    <description>Populating this field from Care Program, use this to create Reports.</description>
    <formula>Care_Program__r.Activity_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Code</label>
    <type>Text</type>
</CustomField>