unpackaged/main/default/objects/Application__c/fields/Address_type_for_payment__c.field-meta.xml
<CustomField>
    <fullName>Address_type_for_payment__c</fullName>
    <label>Address type for payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Mailing Address</fullName>
            </value>
            <value>
                <fullName>Another Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>