unpackaged/main/default/objects/Application__c/fields/Applicant_has_no_award_in_last_12months__c.field-meta.xml
<CustomField>
    <fullName>Applicant_has_no_award_in_last_12months__c</fullName>
    <description>Has the applicant been awarded treatment assistance in the last 12 months?</description>
    <formula>IF( CEILING(( TODAY()  -  Patient__r.Payment_Date__c ) / 365 * 12) &lt; 12 , &quot;No&quot;, &quot;Yes&quot;)</formula>
    <inlineHelpText>Is this applicant been awarded medical treatment assistance in past 12 Months?</inlineHelpText>
    <label>Applicant Has No Award In Last 12Months?</label>
    <type>Text</type>
</CustomField>