unpackaged/main/default/objects/Application__c/fields/Applicant_resides_US_Territory__c.field-meta.xml
<CustomField>
    <fullName>Applicant_resides_US_Territory__c</fullName>
    <description>Is this Applicant Resides under US Territory?</description>
    <formula>IF( ISPICKVAL( Patient__r.PersonContact.MailingCountryCode ,&apos;US&apos;), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Resides In US Territory?</label>
    <type>Text</type>
</CustomField>