unpackaged/main/default/objects/Application__c/fields/Applicant_within_income_guideline__c.field-meta.xml
<CustomField>
    <fullName>Applicant_within_income_guideline__c</fullName>
    <description>Whether the Applicant comes under Income Guidelines? This field get Auto Populated.</description>
    <inlineHelpText>Is Applicant within income guidelines?</inlineHelpText>
    <label>Applicant Within Income Guidelines?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Incomplete Application</fullName>
            </value>
            <value>
                <fullName>No Income Guidelines On Care Program</fullName>
            </value>
            <value>
                <fullName>Care Program Not Selected</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>