unpackaged/main/default/objects/Application__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date on which Application was submitted by the Patient / Relative.</description>
    <inlineHelpText>The date on which Application was submitted by the Patient / Relative.</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>