unpackaged/main/default/objects/Application__c/fields/Application_Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>Application_Processing_Time__c</fullName>
    <formula>Approval_Rejected_Date__c   -   Application_Date__c  - Need_More_Info_Status_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Processing Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>