unpackaged/main/default/objects/Application__c/fields/Application_Source__c.field-meta.xml
<CustomField>
    <fullName>Application_Source__c</fullName>
    <description>The Source which the Applicant/Patient  was Submitted their Application.</description>
    <label>Application Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source</valueSetName>
    </valueSet>
</CustomField>