unpackaged/main/default/objects/Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>The Status from the Application Submitted/New to till Approved or Rejected.</description>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Declined</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
                <isActive>false</isActive>
                <label>Paid</label>
            </value>
            <value>
                <fullName>Payment Error</fullName>
                <isActive>false</isActive>
                <label>Payment Error</label>
            </value>
            <value>
                <fullName>Payment Processing</fullName>
                <isActive>false</isActive>
                <label>Payment Processing</label>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
                <isActive>false</isActive>
                <label>Waitlisted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>