unpackaged/main/default/objects/Application__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <description>Type of Application. default TAP.</description>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Treatment_Application_Program</valueSetName>
    </valueSet>
</CustomField>