unpackaged/main/default/objects/Application__c/fields/Approval_Duration__c.field-meta.xml
<CustomField>
    <fullName>Approval_Duration__c</fullName>
    <description>The difference from Approval Date, Application Date.</description>
    <formula>CEILING( Approval_Rejected_Date__c - Application_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>