unpackaged/main/default/objects/Application__c/fields/Approval_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rejected_Date__c</fullName>
    <description>When ever Application get Approved or Rejected, thru Process Builder this field get update.</description>
    <label>Approval/Rejected Date</label>
    <type>Date</type>
</CustomField>