unpackaged/main/default/objects/Application__c/fields/Approved_Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Approved_Status_Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Duration from Approved Stage to any other Status.</description>
    <label>Approved Status Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>