unpackaged/main/default/objects/Application__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Beneficiary Bank Name.</description>
    <label>Bank Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>