unpackaged/main/default/objects/Application__c/fields/Breast_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Breast_Cancer_Diagnosis_Date__c</fullName>
    <description>The date on which patient is diagnosed with breast cancer.</description>
    <inlineHelpText>The date on which patient is diagnosed with breast cancer.</inlineHelpText>
    <label>Breast Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>