unpackaged/main/default/objects/Application__c/fields/Breast_Cancer_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Breast_Cancer_Recurrence__c</fullName>
    <label>Breast Cancer Recurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>