unpackaged/main/default/objects/Application__c/fields/Breast_Cancer_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Breast_Cancer_Subtype__c</fullName>
    <description>some Subtypes of Breast Cancer. Subtypes include tubular, mucinous, medullary and papillary.</description>
    <label>Breast Cancer Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TNBC (ER-/PR-/HER2-)</fullName>
            </value>
            <value>
                <fullName>TPBC (ER+/PR+/HER2+)</fullName>
            </value>
            <value>
                <fullName>ER+/HER2-</fullName>
            </value>
            <value>
                <fullName>ER-/HER2+</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
                <label>Other (Please Specify)</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>