unpackaged/main/default/objects/Application__c/fields/Breast_cancer_type__c.field-meta.xml
<CustomField>
    <fullName>Breast_cancer_type__c</fullName>
    <description>Types of breast cancer include ductal carcinoma in situ, invasive ductal carcinoma, inflammatory breast cancer, and metastatic breast cancer.</description>
    <label>Breast Cancer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ductal carcinoma in situ (DCIS)</fullName>
                <label>Ductal Carcinoma In Situ (DCIS)</label>
            </value>
            <value>
                <fullName>Invasive Ductal Carcinoma</fullName>
            </value>
            <value>
                <fullName>Invasive Lobular Carcinoma</fullName>
            </value>
            <value>
                <fullName>Inflammatory Breast Cancer</fullName>
            </value>
            <value>
                <fullName>Metaplastic Breast Cancer</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
                <label>Other (Please Specify)</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>