unpackaged/main/default/objects/Application__c/fields/Canceled_Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Status_Duration__c</fullName>
    <description>The Duration from Cancelled Stage to any other Stage.</description>
    <label>Canceled Status Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>