unpackaged/main/default/objects/Application__c/fields/Care_Program__c.field-meta.xml
<CustomField>
    <fullName>Care_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with Care Program, Populate Name of the Care Program for the Application.</description>
    <label>Care Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CareProgram.Care_Program_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.Application_Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>CareProgram.Status</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CareProgram</referenceTo>
    <relationshipLabel>Applications (Care Program)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>