unpackaged/main/default/objects/Application__c/fields/Childcare__c.field-meta.xml
<CustomField>
    <fullName>Childcare__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether Applicant Needed  Financial Support for Child Care?</description>
    <label>Child Care</label>
    <type>Checkbox</type>
</CustomField>