unpackaged/main/default/objects/Application__c/fields/Co_Pay__c.field-meta.xml
<CustomField>
    <fullName>Co_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your health insurance have a co-pay?</description>
    <inlineHelpText>Does your health insurance have a co-pay?</inlineHelpText>
    <label>Co-Pay/Co-Insurance</label>
    <type>Checkbox</type>
</CustomField>