unpackaged/main/default/objects/Application__c/fields/Co_Pay_Amount__c.field-meta.xml
<CustomField>
    <fullName>Co_Pay_Amount__c</fullName>
    <description>Fixed amount for a covered service, paid by patient to the provider of service before receiving the service.</description>
    <inlineHelpText>Fixed amount for a covered service, paid by patient to the provider of service before receiving the service.</inlineHelpText>
    <label>Co-Pay/Co-Insurance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>