unpackaged/main/default/objects/Application__c/fields/Completed_Physical_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Completed_Physical_Form_Received__c</fullName>
    <description>Check true if the completed physician form received along with application form.</description>
    <inlineHelpText>Check true if the completed physician form received along with application form.</inlineHelpText>
    <label>Completed Physical Form Received?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>