unpackaged/main/default/objects/Application__c/fields/Current_Draft_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Draft_Step__c</fullName>
    <label>Current Draft Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Initial</label>
            </value>
            <value>
                <fullName>Contact Information</fullName>
            </value>
            <value>
                <fullName>Identity Information</fullName>
            </value>
            <value>
                <fullName>Breast Cancer Information</fullName>
            </value>
            <value>
                <fullName>Health Insurance Information</fullName>
            </value>
            <value>
                <fullName>Payment Information</fullName>
            </value>
            <value>
                <fullName>Medical Provider Letter</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Review Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>