unpackaged/main/default/objects/Application__c/fields/Current_Stages__c.field-meta.xml
<CustomField>
    <fullName>Current_Stages__c</fullName>
    <description>Current Stage for Patient&apos;s Breast Cancer.</description>
    <label>Current Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stage-0/In Situ (DCIS)</fullName>
            </value>
            <value>
                <fullName>Stage-I</fullName>
            </value>
            <value>
                <fullName>Stage-II</fullName>
            </value>
            <value>
                <fullName>Stage-III</fullName>
            </value>
            <value>
                <fullName>Stage-IV</fullName>
            </value>
            <value>
                <fullName>Undesignated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>