unpackaged/main/default/objects/Application__c/fields/Date_Of_Breast_Cancer_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Breast_Cancer_Diagnosis__c</fullName>
    <description>The date on which patient is diagnosed with breast cancer.</description>
    <inlineHelpText>The date on which patient is diagnosed with breast cancer.</inlineHelpText>
    <label>Date Of Breast Cancer Diagnosis</label>
    <type>Date</type>
</CustomField>