unpackaged/main/default/objects/Application__c/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there any Deductible before your Health Insurance begins to Pay?</description>
    <label>Deductible</label>
    <type>Checkbox</type>
</CustomField>