unpackaged/main/default/objects/Application__c/fields/Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Amount__c</fullName>
    <description>A deductible is the amount you pay for health care services before your health insurance begins to pay.</description>
    <label>Deductible Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>