unpackaged/main/default/objects/Application__c/fields/Deferred_Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Status_Duration__c</fullName>
    <description>The Duration from Deferred to any other Stage. Using Trigger this field get Update.</description>
    <label>Deferred Status Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>