unpackaged/main/default/objects/Application__c/fields/Durable_medical_equipment_e_g_oxygen__c.field-meta.xml
<CustomField>
    <fullName>Durable_medical_equipment_e_g_oxygen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Durable medical equipment that Medicare covers  include: Hospital beds, infusion supplies, oxygen equipment, patient lifts, and blood sugar monitors etc.</description>
    <inlineHelpText>Durable medical equipment (e.g. oxygen, walker, wheelchair, etc.)</inlineHelpText>
    <label>Durable Medical Equipment</label>
    <type>Checkbox</type>
</CustomField>