unpackaged/main/default/objects/Application__c/fields/Elder_Care__c.field-meta.xml
<CustomField>
    <fullName>Elder_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether Applicant Needed  Financial Support for Aged Care?</description>
    <label>Elder Care</label>
    <type>Checkbox</type>
</CustomField>