unpackaged/main/default/objects/Application__c/fields/Electronic_Check_Postal_Mail__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Check_Postal_Mail__c</fullName>
    <description>The date on which the Electronic Check Payment Made.</description>
    <label>Electronic Check Postal Mail</label>
    <type>Date</type>
</CustomField>