unpackaged/main/default/objects/Application__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <description>Patient&apos;s family&apos;s sources of income like employment, family/friends, pension etc.</description>
    <inlineHelpText>Patient&apos;s family&apos;s sources of income like employment, family/friends, pension etc.</inlineHelpText>
    <label>Family Income Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Social_Security</fullName>
                <label>Social Security</label>
            </value>
            <value>
                <fullName>Pension</fullName>
            </value>
            <value>
                <fullName>Retirement_Savings</fullName>
                <label>Retirement Savings</label>
            </value>
            <value>
                <fullName>Short_or_Long _term_Disability</fullName>
                <label>Short or Long-term Disability</label>
            </value>
            <value>
                <fullName>SSD (Disability)</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>Family or Friend Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (Please Specify)</label>
            </value>
            <value>
                <fullName>Family/Friend Support</fullName>
                <isActive>false</isActive>
                <label>Family/Friend Support</label>
            </value>
            <value>
                <fullName>Family_Friends_Support</fullName>
                <isActive>false</isActive>
                <label>Family/Friends Support</label>
            </value>
            <value>
                <fullName>Other (Please Specify)</fullName>
                <isActive>false</isActive>
                <label>Other(Please Specify)</label>
            </value>
            <value>
                <fullName>Public_Assistance</fullName>
                <isActive>false</isActive>
                <label>Public Assistance</label>
            </value>
            <value>
                <fullName>Retirement</fullName>
                <isActive>false</isActive>
                <label>Retirement</label>
            </value>
            <value>
                <fullName>SSD_Disability</fullName>
                <isActive>false</isActive>
                <label>SSD(Disability)</label>
            </value>
            <value>
                <fullName>Short_Term_Disability</fullName>
                <isActive>false</isActive>
                <label>Short-Term Disability</label>
            </value>
            <value>
                <fullName>Short_Long _Term_Disability</fullName>
                <isActive>false</isActive>
                <label>Short_Long _Term_Disability</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>