unpackaged/main/default/objects/Application__c/fields/Family_Care_childcare_eldercare_etc__c.field-meta.xml
<CustomField>
    <fullName>Family_Care_childcare_eldercare_etc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether Applicant Needed  Financial Support for Family Care?</description>
    <label>Family Care (childcare, eldercare, etc.)</label>
    <type>Checkbox</type>
</CustomField>