unpackaged/main/default/objects/Application__c/fields/Financial_Assistance_Needs__c.field-meta.xml
<CustomField>
    <fullName>Financial_Assistance_Needs__c</fullName>
    <label>Financial Assistance Needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Rent_or_Housing</fullName>
                <label>Rent or Housing</label>
            </value>
            <value>
                <fullName>Utilities_or_Bills</fullName>
                <label>Utilities or Bills</label>
            </value>
            <value>
                <fullName>Food or Groceries</fullName>
            </value>
            <value>
                <fullName>Lymphedema_Supplies_or_Care</fullName>
                <label>Lymphedema Supplies or Care</label>
            </value>
            <value>
                <fullName>Oral Treatment Medications</fullName>
            </value>
            <value>
                <fullName>Palliative Care</fullName>
            </value>
            <value>
                <fullName>Child Care</fullName>
            </value>
            <value>
                <fullName>Elder Care</fullName>
            </value>
            <value>
                <fullName>Home Health Care</fullName>
            </value>
            <value>
                <fullName>Side-Effect Management Medication</fullName>
            </value>
            <value>
                <fullName>Durable Medical Equipment</fullName>
            </value>
            <value>
                <fullName>Lymphdema Care Or Supplies</fullName>
                <isActive>false</isActive>
                <label>Lymphdema Care Or Supplies</label>
            </value>
            <value>
                <fullName>Lymphedema_Care_or_Supplies</fullName>
                <isActive>false</isActive>
                <label>Lymphedema_Care_or_Supplies</label>
            </value>
            <value>
                <fullName>Rent/Housing</fullName>
                <isActive>false</isActive>
                <label>Rent/Housing</label>
            </value>
            <value>
                <fullName>Utilities/Bills</fullName>
                <isActive>false</isActive>
                <label>Utilities/Bills</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>