unpackaged/main/default/objects/Application__c/fields/First_Time_Breast_Cancer_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Breast_Cancer_Diagnosis__c</fullName>
    <label>First Time Breast Cancer Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>