unpackaged/main/default/objects/Application__c/fields/First_Time_Diagnosis_or_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Diagnosis_or_Recurrence__c</fullName>
    <description>Is This Patient Diagnosed First Time or Recurrence?</description>
    <label>First Time Diagnosis or Recurrence?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First_Time_Diagnosis</fullName>
                <label>First Time Diagnosis</label>
            </value>
            <value>
                <fullName>Recurrence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>