unpackaged/main/default/objects/Application__c/fields/Follow_up_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Frequency__c</fullName>
    <description>How often do you reach out to certain doctors or specialists for Breast cancer check ups or treatment?</description>
    <inlineHelpText>How often do you reach out to certain doctors or specialists for Breast cancer check ups or treatment?</inlineHelpText>
    <label>Follow-up Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>6Months</fullName>
                <label>6 Months</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>