unpackaged/main/default/objects/Application__c/fields/Food_or_Groceries__c.field-meta.xml
<CustomField>
    <fullName>Food_or_Groceries__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether Applicant Needed Financial Support for Food or Groceries?</description>
    <label>Food or Groceries</label>
    <type>Checkbox</type>
</CustomField>