unpackaged/main/default/objects/Application__c/fields/Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Patient have Health Insurance?</description>
    <label>Health Insurance</label>
    <type>Checkbox</type>
</CustomField>