unpackaged/main/default/objects/Application__c/fields/Home_Health_Care__c.field-meta.xml
<CustomField>
    <fullName>Home_Health_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Applicant Needed Financial Support for Home Health Care during he/she Treatment.</description>
    <label>Home Health Care</label>
    <type>Checkbox</type>
</CustomField>