unpackaged/main/default/objects/Application__c/fields/Hospital_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Clinic__c</fullName>
    <description>Name of the Hospital/Clinic.</description>
    <label>Hospital/Clinic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>