unpackaged/main/default/objects/Application__c/fields/Hospital_Clinic_Address__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Clinic_Address__c</fullName>
    <description>Hospital Address(Street, Postal etc).</description>
    <label>Hospital/Clinic Street Address</label>
    <type>TextArea</type>
</CustomField>