unpackaged/main/default/objects/Application__c/fields/Hospital_Clinic_City__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Clinic_City__c</fullName>
    <description>Hospital Address(City).</description>
    <label>Hospital/Clinic City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>