unpackaged/main/default/objects/Application__c/fields/Hospital_Clinic_Fax__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Clinic_Fax__c</fullName>
    <description>Hospital Fax Number.</description>
    <label>Hospital/Clinic Fax</label>
    <type>Phone</type>
</CustomField>