unpackaged/main/default/objects/Application__c/fields/Hospital_Clinic_Phone__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Clinic_Phone__c</fullName>
    <description>Hospital Phone Number.</description>
    <label>Hospital/Clinic Phone</label>
    <type>Phone</type>
</CustomField>